Agentforce/force-app/main/default/objects/Risk_Assessment__c/Risk_Assessment__c.object-meta.xml
<CustomObject>
    <description>Contract Risk Assessment</description>
    <label>Risk Assessment</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Risk Assessment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>