Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>