Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Contract_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Business_Unit__c</fullName>
    <description>Contract Business Unit</description>
    <formula>TEXT(Contract__r.Business_Unit__c)</formula>
    <label>Contract Business Unit</label>
    <type>Text</type>
</CustomField>