Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>Contract__r.Account_Name__c</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>