Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q01_Estimated_Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Q01_Estimated_Annual_Contract_Value__c</fullName>
    <inlineHelpText>What is the estimated annual contract value or the total project value (if a Projects contract)?</inlineHelpText>
    <label>Estimated Annual Contract Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than £1.5m</fullName>
            </value>
            <value>
                <fullName>£1.5m - £3m</fullName>
            </value>
            <value>
                <fullName>More than £3m</fullName>
            </value>
            <value>
                <fullName>Unknown (Framework or similar)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>