Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q02_Framework_Master_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Q02_Framework_Master_Service_Agreement__c</fullName>
    <inlineHelpText>Is the contract either a Framework or a Master Services Agreement under which multiple orders or call-offs could be placed?</inlineHelpText>
    <label>Framework or Master Service Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>