Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q03_Public_Contract_Utilities_Contract__c.field-meta.xml
<CustomField>
    <fullName>Q03_Public_Contract_Utilities_Contract__c</fullName>
    <inlineHelpText>Is the contract being procured under the Public Contract Regulations 2015 or the Utilities Contract Regulations 2016?</inlineHelpText>
    <label>Public Contract or Utilities Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>