Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q04_Construction_or_Project__c.field-meta.xml
<CustomField>
    <fullName>Q04_Construction_or_Project__c</fullName>
    <inlineHelpText>Is the contract related to construction works or projects?</inlineHelpText>
    <label>Construction or Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>