Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q05_PFI_or_LIFT__c.field-meta.xml
<CustomField>
    <fullName>Q05_PFI_or_LIFT__c</fullName>
    <inlineHelpText>Is the contract for the provision of services in connection with a PFI or LIFT arrangement?</inlineHelpText>
    <label>PFI or LIFT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>