Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q06_New_Business_Activity_or_New_Sector__c.field-meta.xml
<CustomField>
    <fullName>Q06_New_Business_Activity_or_New_Sector__c</fullName>
    <inlineHelpText>Are the services to be provided under the contract in any respect new business activities for OCS, or is the sector one in which OCS is not already operating?</inlineHelpText>
    <label>New Business Activity or New Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>