Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q07_Services_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Q07_Services_Delivered__c</fullName>
    <inlineHelpText>What are the services to be delivered?</inlineHelpText>
    <label>Services Delivered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Specialist/ Window cleaning</fullName>
            </value>
            <value>
                <fullName>Security Systems</fullName>
            </value>
            <value>
                <fullName>Other not listed or multi service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>