Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q08_TUPE_Employees__c.field-meta.xml
<CustomField>
    <fullName>Q08_TUPE_Employees__c</fullName>
    <inlineHelpText>How many staff will transfer under TUPE?</inlineHelpText>
    <label># TUPE Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 25</fullName>
            </value>
            <value>
                <fullName>More than 25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>