Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q09_TUPE_Government_Pension_or_similar__c.field-meta.xml
<CustomField>
    <fullName>Q09_TUPE_Government_Pension_or_similar__c</fullName>
    <inlineHelpText>Is it likely that individuals TUPE&apos;ing in will participate in an Local Government Pension Scheme (or similar scheme)?</inlineHelpText>
    <label>TUPE Government Pension or similar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>