Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q10_Liability_Capped_20m_level_required__c.field-meta.xml
<CustomField>
    <fullName>Q10_Liability_Capped_20m_level_required__c</fullName>
    <inlineHelpText>Does the contract explicitly state that our liability is capped at no more than (a) £20m or (b) the level of the required insurances?</inlineHelpText>
    <label>Liability Capped &lt;£20m or level required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>