Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q11_Payment_Terms_Under_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Q11_Payment_Terms_Under_30_Days__c</fullName>
    <inlineHelpText>Are the payment terms 30 days from invoice date/receipt or less?</inlineHelpText>
    <label>Payment Terms Under 30 Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>