Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q12_CAPEX_200k__c.field-meta.xml
<CustomField>
    <fullName>Q12_CAPEX_200k__c</fullName>
    <inlineHelpText>Does the contract or our solution involve capex spend of £200,000 or more?</inlineHelpText>
    <label>CAPEX &gt; £200k</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>