Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q13_Bond_Prebate_or_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>Q13_Bond_Prebate_or_Liquidated_Damages__c</fullName>
    <inlineHelpText>Does the contract or our solution require/involve the provision of a bond and/or payment of an upfront prebate (or similar) and/or payment of liquidated damages?</inlineHelpText>
    <label>Bond, Prebate or Liquidated Damages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>