Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q14_Service_Credit_or_KPI_Risk_5_ACV__c.field-meta.xml
<CustomField>
    <fullName>Q14_Service_Credit_or_KPI_Risk_5_ACV__c</fullName>
    <inlineHelpText>Does the contract include a service credit / KPI mechanism which could put at risk 5% or more of the annual contract value?</inlineHelpText>
    <label>Service Credit or KPI Risk &gt; 5% ACV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>