Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q15_Repair_Threshold_1k__c.field-meta.xml
<CustomField>
    <fullName>Q15_Repair_Threshold_1k__c</fullName>
    <inlineHelpText>Is there an inclusive repair threshold that exceeds £1,000?</inlineHelpText>
    <label>Repair Threshold &gt;£1k</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#FF9900</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#33CC00</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>