Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Q16_Contract_Standard_Template_Terms__c.field-meta.xml
<CustomField>
    <fullName>Q16_Contract_Standard_Template_Terms__c</fullName>
    <inlineHelpText>Is the contract formed on NEC, JCT or similar standard template terms?</inlineHelpText>
    <label>Contract Standard Template Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>