Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Assessment_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_CaseSafeID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Risk_Assessment_CaseSafeID</label>
    <type>Text</type>
</CustomField>