Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/System_Is_Submitted__c.field-meta.xml
<CustomField>
    <fullName>System_Is_Submitted__c</fullName>
    <description>True if Submitted is populated</description>
    <formula>NOT(ISNULL(Submitted__c))</formula>
    <label>Is Submitted</label>
    <type>Checkbox</type>
</CustomField>