Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/System_Q01_RAG__c.field-meta.xml
<CustomField>
    <fullName>System_Q01_RAG__c</fullName>
    <formula>CASE (TEXT(Q01_Estimated_Annual_Contract_Value__c),
&quot;Less than £1.5m&quot;,IMAGE( &apos;/resource/GreenCircleTick&apos;, &apos;Green&apos;),
&quot;£1.5m - £3m&quot;, IMAGE( &apos;/resource/AmberCircleWarning&apos;, &apos;Yellow&apos;),
&quot;More than £3m&quot;, IMAGE( &apos;/resource/RedCircleCross&apos;, &apos;Red&apos;),
&quot;Unknown (Framework or similar)&quot;, IMAGE( &apos;/resource/RedColour&apos;, &apos;Red&apos;),
&quot;&quot;)</formula>
    <label>System:Q01 RAG</label>
    <type>Text</type>
</CustomField>