Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/System_Q02_RAG__c.field-meta.xml
<CustomField>
    <fullName>System_Q02_RAG__c</fullName>
    <formula>CASE (TEXT(Q02_Framework_Master_Service_Agreement__c),
&quot;Yes&quot;, IMAGE( &apos;/resource/RedCircleCross&apos;, &apos;Red&apos;),
&quot;No&quot;, IMAGE( &apos;/resource/GreenCircleTick&apos;, &apos;Green&apos;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System:Q02 RAG</label>
    <type>Text</type>
</CustomField>