Agentforce/force-app/main/default/objects/Risk_Assessment__c/fields/System_Q03_RAG__c.field-meta.xml
<CustomField>
    <fullName>System_Q03_RAG__c</fullName>
    <formula>CASE (TEXT(Q03_Public_Contract_Utilities_Contract__c),
&quot;Yes&quot;, IMAGE( &apos;/resource/RedCircleCross&apos;, &apos;Red&apos;),
&quot;No&quot;, IMAGE( &apos;/resource/GreenCircleTick&apos;, &apos;Green&apos;),
&quot;&quot;)</formula>
    <label>System:Q03 RAG</label>
    <type>Text</type>
</CustomField>