Agentforce/force-app/main/default/objects/Risk_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>